# cleave

./: .env.example  .gitignore  =4.2.3  CLAUDE.md  README.md  TODO.md  UI-POLISH-TODO.md  claude-code-auth-impl-prompt.md  cutana-architecture-plan.md  cutana-cloud-ui.md  docker-compose.yml  extensions.txt  todos.md
backend/: Dockerfile  alembic.ini  auth.py  config.py  database.py  dependencies.py  logging_config.py  main.py  pyproject.toml  rate_limit.py  test.db  worker.py
backend/migrations/: env.py
backend/models/: __init__.py  analysis_job.py  experiment.py  experiment_event.py  fastq_file.py  job_output.py  notification.py  project.py  reaction.py  saved_server.py  user.py
backend/pipelines/: __init__.py  alignment.py  base.py  custom_heatmap.py  diffbind.py  fastqc.py  methods_text.py  peak_calling.py  pearson_correlation.py  rnaseq_alignment.py  rnaseq_de.py  rnaseq_feature_counts.py  rnaseq_pathway.py  rnaseq_qc.py  rnaseq_trimming.py  roman_normalization.py  spike_in_barcodes.py  trimming.py
backend/routers/: admin.py  auth.py  experiments.py  fastq_files.py  files.py  jobs.py  local_import.py  notifications.py  projects.py  reactions.py  server_import.py  tus_upload.py  users.py
backend/schemas/: admin.py  auth.py  auto_pipeline.py  common.py  experiment.py  experiment_event.py  fastq_file.py  file.py  job.py  local_import.py  notification.py  project.py  qc_report.py  reaction.py  server_import.py  user.py
backend/services/: admin_service.py  auth_service.py  auto_pipeline_service.py  cleanup_service.py  download_token_service.py  email_service.py  event_service.py  experiment_service.py  fastq_service.py  fastqc_service.py  file_service.py  job_output_service.py  job_service.py  local_import_service.py  notification_service.py  permission_helpers.py  project_service.py  qc_report_service.py  reaction_service.py  server_credential_service.py  server_import_service.py  sse_service.py  trimming_service.py
backend/templates/: job_complete.html  password_reset.html  password_reset_confirm.html
backend/tests/: conftest.py  test_admin.py  test_alignment_concurrency.py  test_alignment_pipeline.py  test_auth.py  test_cleanup_service.py  test_custom_heatmap_pipeline.py  test_diffbind_pipeline.py  test_download_token_service.py  test_email_service.py  test_experiment_events.py  test_experiments.py  test_fastq_upload.py  test_fastq_validation.py  test_fastqc.py  test_files.py  test_job_output_service.py  test_jobs_api.py  test_local_import.py  test_notifications.py  test_peak_calling_pipeline.py  test_pearson_correlation_pipeline.py  test_projects.py  (+20 more)
(+670 files in other folders)
