# backend/pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleave-backend"
version = "0.1.0"
description = "Cleave — self-hosted CUT&RUN/CUT&Tag bioinformatics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.setuptools]
py-modules = ["main", "config", "database", "dependencies", "logging_config", "worker"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "schemas*", "routers*", "services*", "pipelines*", "migrations*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["pipelines/tools/", "pipelines/adapters/", "migrations/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
